Changed minimum version to Java 17, and fixed all deprecation warnings associated with using URLs.