@@ -1,6 +1,8 @@
 package org.jscep.client;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import javax.security.auth.callback.CallbackHandler;
@@ -15,44 +17,44 @@ public class ClientValidationTest {
     }
 
     @Test(expected = NullPointerException.class)
-    public void testNullCallbackHandler() {
+    public void testNullCallbackHandler() throws URISyntaxException {
         new Client(getUrl(), (CallbackHandler) null);
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void testInvalidUrlProtocol() {
+    public void testInvalidUrlProtocol() throws URISyntaxException {
         new Client(getUrl("ftp"), getCallbackHandler());
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void testUrlWithReference() {
+    public void testUrlWithReference() throws URISyntaxException {
         new Client(getUrlWithReference(), getCallbackHandler());
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void testUrlWithQueryString() {
+    public void testUrlWithQueryString() throws URISyntaxException {
         new Client(getUrlWithQueryString(), getCallbackHandler());
     }
 
-    private URL getUrlWithQueryString() {
+    private URL getUrlWithQueryString() throws URISyntaxException {
         try {
-            return new URL("http://jscep.org/pkiclient.exe?key=value");
+            return new URI("http://jscep.org/pkiclient.exe?key=value").toURL();
         } catch (MalformedURLException e) {
             throw new RuntimeException(e);
         }
     }
 
-    private URL getUrlWithReference() {
+    private URL getUrlWithReference() throws URISyntaxException {
         try {
-            return new URL("http://jscep.org/pkiclient.exe#reference");
+            return new URI("http://jscep.org/pkiclient.exe#reference").toURL();
         } catch (MalformedURLException e) {
             throw new RuntimeException(e);
         }
     }
 
-    private URL getUrl(String protocol) {
+    private URL getUrl(String protocol) throws URISyntaxException {
         try {
-            return new URL(protocol, "jscep.org", "pkiclient.exe");
+            return new URI(protocol, "jscep.org", "/pkiclient.exe", null).toURL();
         } catch (MalformedURLException e) {
             throw new RuntimeException(e);
         }
@@ -62,7 +64,7 @@ public class ClientValidationTest {
         return new DefaultCallbackHandler(new OptimisticCertificateVerifier());
     }
 
-    private URL getUrl() {
+    private URL getUrl() throws URISyntaxException {
         return getUrl("http");
     }
 }
